force-app/main/default/objects/clariti__CashDeposit__c/clariti__CashDeposit__c.object-meta.xml
<CustomObject>
    <label>Cash Deposit</label>
    <nameField>
        <displayFormat>CD-{0000}</displayFormat>
        <label>Cash Deposit Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Cash Deposits</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>