force-app/main/default/objects/clariti__CashDeposit__c/fields/clariti__CashierSession__c.field-meta.xml
<CustomField>
    <fullName>clariti__CashierSession__c</fullName>
    <label>Cashier Session</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Cashier Session should be not closed</errorMessage>
        <filterItems>
            <field>clariti__CashierSession__c.clariti__Status__c</field>
            <operation>notEqual</operation>
            <value>Closed</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>clariti__CashierSession__c</referenceTo>
    <relationshipLabel>Cash Deposits</relationshipLabel>
    <relationshipName>CashDeposits</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>