force-app/main/default/objects/clariti__CashDeposit__c/fields/clariti__RejectionNotes__c.field-meta.xml
<CustomField>
    <fullName>clariti__RejectionNotes__c</fullName>
    <label>Rejection Notes</label>
    <type>TextArea</type>
</CustomField>