force-app/main/default/objects/clariti__CashDeposit__c/validationRules/clariti__RejectionNotesAreRequired.validationRule-meta.xml
<ValidationRule>
    <fullName>clariti__RejectionNotesAreRequired</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL(clariti__Status__c, &apos;Rejected&apos;) &amp;&amp; ISBLANK(clariti__RejectionNotes__c)</errorConditionFormula>
    <errorDisplayField>clariti__RejectionNotes__c</errorDisplayField>
    <errorMessage>Rejection Notes are required.</errorMessage>
</ValidationRule>