force-app/main/default/objects/clariti__CashDeposit__c/validationRules/clariti__UserDoesNotHaveEditCashDepositPerm.validationRule-meta.xml
<ValidationRule>
    <fullName>clariti__UserDoesNotHaveEditCashDepositPerm</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL(PRIORVALUE(clariti__Status__c), &apos;Closed&apos;) &amp;&amp;
!ISNEW() &amp;&amp;
((!ISCHANGED(clariti__Status__c) &amp;&amp; $Permission.clariti__EditCashDeposit) || !$Permission.clariti__EditCashDeposit)</errorConditionFormula>
    <errorMessage>You do not have permission to edit a closed Cash Deposit.</errorMessage>
</ValidationRule>