force-app/main/default/objects/clariti__CashDeposit__c/validationRules/clariti__UserDoesNotHaveManageCashDepositPerm.validationRule-meta.xml
<ValidationRule>
    <fullName>clariti__UserDoesNotHaveManageCashDepositPerm</fullName>
    <active>true</active>
    <errorConditionFormula>(ISPICKVAL( clariti__Status__c , &apos;Rejected&apos;) || ISPICKVAL( clariti__Status__c , &apos;Closed&apos;)) &amp;&amp; NOT($Permission.clariti__ManageCashDeposits) &amp;&amp;  ISCHANGED(clariti__Status__c)</errorConditionFormula>
    <errorDisplayField>clariti__Status__c</errorDisplayField>
    <errorMessage>You do not have permission to manage Cash Deposits.</errorMessage>
</ValidationRule>